--- a/Inception/app.css
+++ b/Inception/app.css
@@ -1,3 +1,12 @@
 body {
-    background-image: url("https://images4.alphacoders.com/845/84504.jpg");
+
+    position: absolute;
+    left: -43.75%;
+    right: -38.33%;
+    top: 0%;
+    bottom: -4.79%;
+
+    background: url(inception-5900fb908c53e.jpg);
+    mix-blend-mode: normal;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    }
