--- a/Inception/app_cast.css
+++ b/Inception/app_cast.css
@@ -1,7 +1,13 @@
-body {
-    position: relative;
+html, body {
+    height: 100%;
+}
+.body {
     background: url(inception-cast.jpg);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
+    display: flex;
+    align-items: flex-end;
+    height: 100%;
+    justify-content: space-around;
    }
