--- a/Inception/app_preview.css
+++ b/Inception/app_preview.css
@@ -5,3 +5,22 @@ body {
     background-size: 100% 100%;
     background-attachment: fixed;
    }
+.text{position: absolute;
+    width: 533px;
+    height: 520px;
+    left: 93px;
+    top: 394px;
+    
+    font-family: Monda;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 46px;
+    
+    color: #FFFFFF;
+    }
+.video{position: absolute;
+    width: 610px;
+    height: 398px;
+    left: 750px;
+    top: 474px;}
